--- a/css/seunga.css
+++ b/css/seunga.css
@@ -49,165 +49,232 @@ a {
 연한 하늘색 #F0F4FF
 푸터색 #3333
 */
-
 /* =======================================================승아 */
 /* 상당로고 이미지 */
+h4 {
+  font-weight: bold;
+  padding: 10% 0 10% 2%;
+  font-size: 36px;
+  text-align: left;
+}
+/* 로그인버튼 */
+/* 기본 스타일 */
+/* body {
+  font-family: Arial, sans-serif;
+  background-color: #96c99f;
+  height: 100vh;
+  box-sizing: border-box;
+} */
+
+.wrap {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
+  width: 80%;
+  padding: 10px;
+  margin: 0 auto;
+}
+
+/* 섹션 스타일 */
+.section {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+#signup-section {
+  width: 30%;
+  margin-left: 20px;
+}
+
+#dashboard-section {
+  width: 70%;
+  display: inline-block;
+}
+
+/* 버튼 스타일 */
+/* button {
+  width: 80%;
+  background-color: #007bff;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+} */
+
+/* 로그아웃 버튼 스타일 */
+#logout-button {
+  background-color: #1e6bf1;
+  width: 30%;
+  float: right;
+}
+
+/* 사용자 이름 디스플레이 스타일 */
+#username-display {
+  font-size: 20px;
+  color: #3d3d3d;
+  /* width: 60%; */
+  margin-top: 8px;
+  display: inline-block;
+  margin-left: 100px;
+}
+#login-section {
+  width: 70%;
+}
 header {
+  max-width: 1400px;
+  width: 100%;
+  height: auto;
   position: relative;
-  /* background-color: purple; */
-  z-index: 99999999999;
+  padding: 30px;
+  background-color: rgba(255, 255, 255, 0.8);
+  margin: 0 auto;
+  /* position: fixed; */
 }
 header img {
-  width: 200px;
+  width: 220px;
   display: inline-block;
   position: absolute;
   left: 0;
   top: 0;
-  padding: 22px;
+  padding: 20px;
 }
-
 /* 상단메뉴 박스 */
-nav {
+.top-nav {
+  max-width: 1400px;
   width: 100%;
-  /* background-color: antiquewhite; */
-  /* background-color: rgba(255, 255, 255, 0.8); */
-  background-color: rgba(255, 255, 255, 0.8);
-  padding: 30px;
-  position: fixed;
   display: block;
+  padding: 22px;
+  position: relative; /* 수정 */
   z-index: 9999;
+  margin: 0 auto;
 }
-/* 상단메뉴 */
-.top-menu {
+/* ==================== */
+
+/* 네비 */
+.main-menu {
   display: flex;
   justify-content: center;
-  color: #134aa9;
-  gap: 4%;
-  font-size: 18px;
-}
-.top-menu li a {
-  font-family: "KBO-Dia-Gothic_medium";
-  white-space: nowrap;
-  color: #134aa9;
-}
-.top-menu li:hover a {
-background: linear-gradient(to top,  #F0F4FF 100%, transparent 40%);
-transition: all 5s;
-}
-.top-menu li:nth-child(5) {
-  margin-left: 8%;
+  gap: 100px;
+  height: 90px;
+  font-size: 22px;
+  font-weight: bold;
+  background-color: white;
 }
 /* 메뉴-log */
 .log {
-  font-size: 16px;
+  font-size: 18px;
   display: flex;
-  gap: 30px;
-  position: absolute;
-  right: 5%;
-}
-.visual {
-  position: relative;
-}
-.visual-img {
-  width: 100%;
-  height: auto;
-}
-
-/* 모바일 비주얼이미지 */
-.mb-visual-img{
-  display: none;
+  justify-content: center;
+  gap: 16%;
+  padding: 8px 0 8px 0;
+  margin-left: 4%;
+  right: 0; /* 수정 */
+  top: 0; /* 추가 */
 }
 /* 네비 호버 */
-.top-menu > li{
-  padding: 5px;
-}
-.top-menu > li:hover > a {
-  /* background: linear-gradient(to top,#1e6bf1 40%, transparent 40%); */
+.main-menu > li:hover > a {
+  /* color: #0080ed; */
+  /* color: #f68245; */
+  /* color: #a4bdeb; */
+  background: linear-gradient(to top, #134aa9 40%, transparent 40%);
   transition: all 3s;
-  /* color: #1e6bf1; */
-  background-color:#F0F4FF ;
-  /* text-decoration: underline; */
 }
-
-
+.main-menu > li > .sub-menu > li:hover > a {
+  /* color: #fed74b; */
+  color: #134aa9;
+}
+/* 햄버거 눌렀을 때 호버 */
+.nav-mb-gnb li:hover a {
+  color: #134aa9;
+}
+.navbt {
+  display: none;
+  /* position: absolute;
+  top: 90px;
+  left: 0; */
+  width: 100%;
+  height: 400px;
+  z-index: -1;
+  background-color: white;
+}
+.sub-menu {
+  width: 100%;
+  z-index: 1;
+  font-size: 20px;
+}
+.sub-menu li {
+  display: none;
+  width: 100%;
+  text-decoration: none;
+  color: black;
+}
 /*   모바일 로고 */
 .logo-tablet,
 .fa-solid {
-  /* display: none; */
+  display: none;
 }
 /* 모바일 메뉴 햄버거  */
-/* @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@다시확인 */
-.m-bt {
+.mbt {
   display: none;
   position: absolute;
-  top: 35px;
+  top: 0;
   bottom: 0;
   margin: auto;
-  right: 35px;
-  width: 28px;
-  height: 15px;
-  /* background-color: transparent; */
-  /* background-color: red; */
+  right: 30px;
+  width: 30px;
+  height: 22px;
+  background-color: transparent;
   border: 0;
   cursor: pointer;
-  z-index: 99999;
 }
-.m-bt span {
+.mbt span {
   position: absolute;
   left: 0;
   top: 0;
   display: block;
   width: 100%;
-  height: 3px;
+  height: 4px;
   background-color: #333;
 }
 /* 햄버거 눌렀을 때 색상 바뀜 */
-.m-bt.active span {
-  background-color: #134aa9;
+.mbt.active span {
+  background-color: #0a3585;
 }
 /* 삼단에서 엑스 바꿔주기 */
-.m-bt span:nth-child(1) {
+.mbt span:nth-child(1) {
   top: 0;
   transform-origin: 0 50%;
   transition: all 0.3s;
 }
-.m-bt.ani span:nth-child(1) {
+.mbt.ani span:nth-child(1) {
   transform: rotate(45deg);
 }
-.m-bt span:nth-child(2) {
+.mbt span:nth-child(2) {
   top: 50%;
 }
-.m-bt.ani span:nth-child(2) {
+.mbt.ani span:nth-child(2) {
   opacity: 0;
 }
-.m-bt span:nth-child(3) {
+.mbt span:nth-child(3) {
   top: 100%;
   transform-origin: 0 50%;
   transition: all 0.3s;
 }
-.m-bt.ani span:nth-child(3) {
+.mbt.ani span:nth-child(3) {
   transform: rotate(-45deg);
-}
-/* 모바일 메뉴 로고이미지 */
-.nav-mb img {
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  margin: 0 auto;
-  width: 150px;
-  padding: 20px;
 }
 /* 모바일 메뉴 리스트 */
 .nav-mb {
   position: absolute;
   left: 100%;
-  /* top: 20px; */
+  top: 90px;
   width: 100%;
   height: calc(100vh - 70px);
   background-color: #fff;
-  /* opacity: 1; */
+  opacity: 1;
   transition: all 0.3s;
   z-index: 9999;
 }
@@ -215,52 +282,108 @@ transition: all 5s;
   left: 0%;
   opacity: 1;
 }
-.nav-mb-gnb li:first-child {
-  margin-top: 100px;
-  border-top: 1px solid #d9d9d9;
+.nav-mb-gnb li {
+  line-height: 70px;
 }
 .nav-mb-gnb li a {
-  line-height: 60px;
   display: block;
   padding: 0 40px;
-  font-size: 16px;
+  font-size: 20px;
   font-weight: bold;
-  color: #000;
+  color: #333;
   border-bottom: 1px solid #d9d9d9;
 }
-.m-log {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-  margin-top: 50px;
+.nav-mb-gnb li:nth-child(4) a {
+  margin-bottom: 20%;
 }
-.m-log a {
+.log a {
   color: #333;
-  font-family: "KBO-Dia-Gothic_medium";
-  text-align: center;
-  font-size: 14px;
+}
+.log a:hover a {
+  color: red;
+}
+.top-menu li:hover a {
+  background: linear-gradient(to top, #f0f4ff 100%, transparent 40%);
+  transition: all 5s;
+}
+.nav-mb img {
 }
 
-.m-log > li:hover a {
+/* ==================== */
+/* 상단메뉴 */
+.top-menu {
+  max-width: 1400px;
+  width: 100%;
+  display: flex;
+  justify-content: flex-end; /* 수정 */
+  text-align: center; /* 추가 */
+  color: #134aa9;
+  gap: 6%;
+  font-size: 20px;
+  position: relative;
+  margin: 0 auto;
+}
+.top-menu li a {
+  font-family: "KBO-Dia-Gothic_medium";
+  white-space: nowrap;
   color: #134aa9;
 }
-/* 햄버거 눌렀을 때 메뉴 호버 */
-.nav-mb-gnb li:hover a {
-  background-color: #f0f4ff;
+.top-menu li:hover a {
+  background: linear-gradient(to top, #f0f4ff 100%, transparent 40%);
+  transition: all 5s;
+}
+.top-menu li:nth-child(5) {
+  margin-left: 8%;
 }
 
+.visual {
+  position: relative;
+  z-index: 99999;
+}
+.visual-img {
+  width: 100%;
+  height: auto;
+  /* position: absolute;
+  right: 0; */
+}
+/* 모바일 비주얼이미지 */
+.mb-visual-img {
+  display: none;
+}
+/* 네비 호버 */
+.top-menu > li {
+  padding: 5px;
+}
+.top-menu > li:hover > a {
+  /* background: linear-gradient(to top,#1e6bf1 40%, transparent 40%); */
+  transition: all 3s;
+  /* color: #1e6bf1; */
+  background-color: #f0f4ff;
+  /* text-decoration: underline; */
+}
+/*   모바일 로고 */
+.logo-tablet,
+.fa-solid {
+  /* display: none; */
+}
 .counter-wrapper {
   width: 100%;
   height: auto;
   background-color: #f0f4ff;
   opacity: 0.9;
+  position: relative;
+}
+.count-inner {
+  max-width: 1400px;
+  height: auto;
+  /* background-color: yellow; */
+  width: 100%;
   display: flex;
-  justify-content: center;
-  gap: 20%;
+  justify-content: space-around;
+  /* gap: 20%; */
   padding: 3%;
-  position: absolute;
-  bottom: 4%;
-  
+
+  margin: 0 auto;
 }
 .counter {
   font-family: "KBO-Dia-Gothic_medium";
@@ -279,117 +402,86 @@ transition: all 5s;
 .count-text {
   font-size: 18px;
   margin-top: 8%;
-white-space: nowrap;
+  white-space: nowrap;
 }
-/* 섹션1-서비스 */
-.section1{
+/* <!-- 섹션1 --> */
+.section1 {
+  padding: 15% 0 15% 0;
+  background-color: #134aa9;
   width: 100%;
   height: auto;
-  background-color: #134aa9;
-  position: relative;
-  padding: 4%;
-}
-.sec1-title {
-  max-width: 1400px;
-  text-align: left;
-  position: absolute;
-  padding: 4%;
-
-}
-.sec1-title h2{
-  font-size: 36px;
   color: #fff;
-  padding-bottom: 8%;
-  font-family: "KBO-Dia-Gothic_medium";
 }
-.sec1-title p{
-  display: inline-block;
-  color: #fff;
-  font-size: 24px;
-}
-.figure-container {
-  max-width: 1400px;
-  display: flex;
-justify-content: space-between;
+.sec1_inner {
   margin: 0 auto;
- padding: 20% 0 12% 0;
- gap: 8%;
+  /* background-color: rgb(235, 193, 200); */
+  max-width: 1400px;
 }
-.section1-img {
-  display: block;
-  font-family: "KBO-Dia-Gothic_medium";
-  position: relative;
-  overflow: hidden;
-  /* margin-bottom: 20px; */
-  max-width: 60%;
-  max-width: 315px;
-  text-align: center;
-  line-height: 1.4em;
-  margin: 4% auto;
-  /* background-color: yellowgreen; */
+.service_box {
+  /* background-color: pink; */
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  gap: 8%;
+  margin: 0 auto;
+  padding: 0 2% 0 2%;
 }
-
-.section1-img img{
+.service_box li {
+  width: calc(100% / 3);
+}
+.service_box li a img {
   width: 100%;
 }
-.section1-img figcaption {
-  position: absolute;
-  top: calc(77%);
-  width: 100%;
-  background-color: #ffffff;
-  padding: 15px 0 60% 0;
-}
-
-.section1-img figcaption:before {
-  position: absolute;
-  content: '';
-  z-index: 2;
-  bottom: 100%;
-  left: 0;
-  width: 100%;
-  /* height: 80px; */
-  background-image: -webkit-linear-gradient(top, transparent 0%, #ffffff 100%);
-  background-image: linear-gradient(to bottom, transparent 100%, #ffffff 100%);
-}
-
-.section1-img h3,
-.section1-img p {
-padding-top: 2%;
-word-wrap: break-word;
-}
-
-.section1-img h3 {
-  font-size: 24px;
-  line-height: 1.2em;
-  font-family: "KBO-Dia-Gothic_medium";
-  text-transform: uppercase;
-}
-.section1-img p {
-  font-size: 18px;
-  letter-spacing: 1px;
-  opacity: 1;
-}
-.section1-img:hover figcaption,
-.section1-img.hover figcaption {
-  top: 60%;
+.service_box li .service_box li .service_box li del,
+p {
+  /* color: blue;  */
+  letter-spacing: 0.3px;
 }
 
 /* ========================================================================== */
 
 @media screen and (max-width: 1200px) {
-.count-title {
-  font-size: 42px;
-}
-.plus {
-  font-size: 16px;
-}
-.count-text {
-  font-size: 18px;
-}
-}
-/* @media screen and (max-width: 1000px) {
   .count-title {
-    font-size: 28px;
+    font-size: 42px;
+  }
+  .plus {
+    font-size: 16px;
+  }
+  .count-text {
+    font-size: 18px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  header img {
+    display: none;
+  }
+  .main-menu {
+    display: none;
+  }
+  .hd-menu {
+    display: none;
+  }
+  .visual {
+    z-index: 9;
+  }
+
+  /* .fa-solid {
+    display: inline-block;
+    font-size: 30px;
+    color: black;
+    line-height: 90px;
+    position: absolute;
+    top: 0;
+    right: 80px;
+    cursor: pointer;
+  } */
+  /* 모바일 메뉴 햄버거  */
+  .mbt {
+    display: block;
+  }
+  .count-title {
+    font-size: 32px;
   }
   .plus {
     font-size: 12px;
@@ -397,104 +489,63 @@ word-wrap: break-word;
   .count-text {
     font-size: 14px;
   }
-} */
-@media screen and (max-width: 768px) {
- /* 상단로고 이미지 */
- .top-nav {
-  display: none;
-}
-header img {
-  width: 120px;
-  padding: 15px;
-}
-/* 상단메뉴 박스 */
-nav {
-  padding: 20px;
-}
-/* 상단메뉴 */
-.top-menu {
-  gap: 4%;
-  font-size: 16px;
-}
-.top-menu li:nth-child(5) {
-  margin-left: 4%;
-}
-/* 메뉴-log */
-.log {
-  font-size: 14px;
-}
-.count-title {
-  font-size: 32px;
-}
-.plus {
-  font-size: 12px;
-}
-.count-text {
-  font-size: 14px;
-}
 
-/* 섹션1-서비스 */
-.nav-mb img {
-  display: block;
-}
-.m-bt {
-  display: block;
-}
-
-  .section1-img {
-    width: 100%;
-    margin-bottom: 20px;
+  /* 섹션1-서비스 */
+  .nav-mb img {
+    display: block;
   }
-  .section1-img h3 {
-font-size: 18px;
+  .m-bt {
+    display: block;
+  }
+  h4 {
+    font-size: 28px;
+  }
 }
-.section1-img p{
-font-size: 14px;
+
+/* ==================================리스트 */
+.list_box {
+  width: 98%;
+  /* background-color: cadetblue; */
+  position: relative;
+  white-space: wrap;
+  gap: 8px;
 }
+.list_box li {
+  width: calc(100% / 4);
 }
+.list_box_text {
+  padding: 4px 0px 0px 4px;
+  position: relative;
+  /* background-color: blueviolet; */
+}
+
 /* ========================================================== */
 @media screen and (max-width: 560px) {
   .visual-img {
-display: none;
+    display: none;
   }
-  
+
   /* 모바일 비주얼이미지 */
-  .mb-visual-img{
+  .mb-visual-img {
     width: 100%;
     display: block;
     margin: 0 auto;
   }
-
-
 }
 /* ========================================================== */
-@media screen and (max-width: 480px) {
-  /* .section1-img {
-    width: calc(100% - 20px); /* 100% for one item per row */
-  } 
-  @media screen and (max-width: 390px) {
-    .count-title {
-      font-size: 16px;
-    }
-    .plus {
-      font-size: 10px;
-  
-    }
-    .count-text {
-      font-size: 10px;
-  
-    }
-    .sec1-title{
-      padding: 5%;
-      /* background-color: black; */
-    }
-    .sec1-title h2{
-      font-size: 16px;
-      /* margin: 4% 0 0 4%; */
-    }
-    .sec1-title p{
-      font-size: 14px;
-    }
+
+@media screen and (max-width: 390px) {
+  .count-title {
+    font-size: 16px;
+  }
+  .plus {
+    font-size: 10px;
+  }
+  .count-text {
+    font-size: 10px;
+  }
+
+  h4 {
+    font-size: 20px;
+  }
 }
-
-
