--- a/css/kyungran.css
+++ b/css/kyungran.css
@@ -7,17 +7,16 @@
 }
 .section-tite {
   display: block;
-  font-size: 28px;
-  font-weight: 600;
+  font-size: 36px;
   padding-top: 150px;
-  padding-bottom: 22px;
+  padding-bottom: 21px;
+  font-weight: bold;
 }
 /* 카테고리 */
 .tab-nav-wrapper {
   overflow: hidden;
-  /* width: 500px; */
   width: 674px;
-  margin: auto;
+  margin: 0 auto;
 }
 .tab-nav {
   display: flex;
@@ -29,7 +28,7 @@
 }
 .tab-nav span {
   /* display: none; */
-  padding-right: 100px;
+  padding-right: 36px;
   background-color: #1e6bf1;
 }
 .tab-nav a {
@@ -40,8 +39,9 @@
   color: black;
   text-decoration: none;
 }
-.tab-nav a:hover, .tab-nav a.active {
-  background-color:  #1e6bf1;
+.tab-nav a:hover,
+.tab-nav a.active {
+  background-color: #1e6bf1;
   color: #fff;
   transition: all 0.3s;
 }
@@ -95,7 +95,7 @@
   display: none;
   position: absolute;
   background-color: #fff;
-  top: 57px;
+  top: 41px;
   right: 115px;
   transform: translateX(-50%);
   border: 1px solid #ddd;
@@ -145,7 +145,7 @@
   display: none;
   position: absolute;
   background-color: #fff;
-  top: 57px;
+  top: 41px;
   right: 34.5px;
   transform: translateX(-50%);
   border: 1px solid #ddd;
@@ -186,7 +186,7 @@
   display: none;
   position: absolute;
   background-color: #fff;
-  top: 57px;
+  top: 41px;
   right: -41px;
   transform: translateX(-50%);
   border: 1px solid #ddd;
@@ -213,13 +213,13 @@
   position: relative;
   display: flex;
   justify-content: space-between;
-  margin-bottom: 25px;
+  padding-bottom: 43px;
   gap: 20px;
 }
 .img-box {
   position: relative;
   display: block;
-min-width: 100px;
+  min-width: 100px;
   height: 100%;
   text-align: left;
 }
@@ -233,29 +233,28 @@ min-width: 100px;
     filter: brightness(60%);
     transition:  all 0.2s ; 
 } */
-.img-box > a:hover .hart-icon{
-    transform: translate( 0 , -10px ) !important;
-    transition:  all 0.2s ease-out; 
+.img-box > a:hover .hart-icon {
+  transform: translate(0, -10px) !important;
+  transition: all 0.2s ease-out;
 }
- .img-box > a:hover span {
- /* color:rgb(19, 74, 169) !important; */
- color:rgb(156, 156, 156) !important;
- /* color:#0042b5 !important; */
-} 
+.img-box > a:hover span {
+  /* color:rgb(19, 74, 169) !important; */
+  color: rgb(156, 156, 156) !important;
+  /* color:#0042b5 !important; */
+}
 /* 내용 */
 
 .list-wrap > .img-box > a > span {
   position: relative;
-  display: block; 
-   overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    word-break: break-all;
+  display: block;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  word-break: break-all;
   padding: 8px 0 0px;
   letter-spacing: -1px;
   color: #1a1a1aa3;
   font-size: 15px;
-
 }
 .list-wrap > .img-box > a > span:nth-child(2) {
   width: 100%;
@@ -275,7 +274,7 @@ min-width: 100px;
   cursor: pointer;
   width: 39px;
   height: 35px;
-background: url("../images/kyungran/hart-icon_gray.svg") no-repeat center;
+  background: url("../images/kyungran/hart-icon_gray.svg") no-repeat center;
   z-index: 99;
 }
 
@@ -285,7 +284,6 @@ background: url("../images/kyungran/hart-icon_gray.svg") no-repeat center;
 .pgn {
   position: relative;
   display: block;
-  padding: 50px 0;
   margin: auto;
 }
 .pgn > span {
@@ -297,7 +295,7 @@ background: url("../images/kyungran/hart-icon_gray.svg") no-repeat center;
 }
 /* 섹션3 */
 .section3 {
-  background-color: #F0F4FF;
+  background-color: #f0f4ff;
   /* background-color: #f0f4ff; */
 }
 .section3-inner {
@@ -321,8 +319,8 @@ background: url("../images/kyungran/hart-icon_gray.svg") no-repeat center;
   border-radius: 10px;
 }
 .CM-box .CM span {
-  font-size: 28px;
-  font-weight: 600;
+  font-size: 36px;
+  font-weight: bold;
 }
 .CM-box .CM .plus-icon {
   position: absolute;
@@ -336,7 +334,7 @@ background: url("../images/kyungran/hart-icon_gray.svg") no-repeat center;
 }
 .CM-box .CM > span > a:hover .plus-icon {
   background: url("../images/kyungran/pluse-icon-set.png") no-repeat bottom;
-transition: all 0.2s;
+  transition: all 0.2s;
 }
 .CM-box .CM li {
   font-size: 22px;
@@ -364,23 +362,22 @@ transition: all 0.2s;
   font-size: 22px;
 }
 .FAQ-box .FAQ span {
-  font-size: 28px;
-  font-weight: 600;
+  font-size: 36px;
+  font-weight: bold;
 }
 .FAQ-box .FAQ .plus-icon {
   position: absolute;
   top: 15px;
   right: 20px;
-    width: 54px;
-    height: 54px;
-    border: none;
-    outline: none;
-    background: url("../images/kyungran/pluse-icon-set.png") no-repeat 0px 0px;
-  }
-    .FAQ-box .FAQ > span > a:hover .plus-icon {
-        background: url("../images/kyungran/pluse-icon-set.png") no-repeat bottom;
-      
-      }
+  width: 54px;
+  height: 54px;
+  border: none;
+  outline: none;
+  background: url("../images/kyungran/pluse-icon-set.png") no-repeat 0px 0px;
+}
+.FAQ-box .FAQ > span > a:hover .plus-icon {
+  background: url("../images/kyungran/pluse-icon-set.png") no-repeat bottom;
+}
 .FAQ-box .FAQ .FAQ-small-box {
   position: absolute;
   width: 100%;
@@ -400,7 +397,7 @@ transition: all 0.2s;
   border-bottom: 1px solid #ddd;
 }
 .FAQ-box .FAQ .FAQ-small-box li {
-   width: 100%;
+  width: 100%;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
