--- a/css/minju.css
+++ b/css/minju.css
@@ -50,11 +50,8 @@
 }
 /* ===================================================== */
 /* 움직이는 텍스트 */
-.section5{
-  width: 100%;
-}
 .section5 .content img {
-  width: 100%;
+  width: 85%;
 }
 .animated-title {
   position: relative;
@@ -108,19 +105,15 @@ footer .right h1 {
 footer .right p {
   line-height: 1.5;
   text-align: left;
-  letter-spacing: 2px;
 }
 footer .left {
   float: right;
   margin: 30px;
 }
-footer .left .tell {
-  width: 100%;
+footer .left i{
   display: block;
-  font-size: 2.5vw;
+  font-size: 3vw;
   text-align: right;
-  font-family: "KBO-Dia-Gothic_medium";
-  letter-spacing: 2px;
 }
 footer .left button {
   width: 130px;
@@ -129,17 +122,11 @@ footer .left button {
   background-color: #333;
   border: 1px solid #fff;
   color: #fff;
-  font-family: "KBO-Dia-Gothic_medium";
-  letter-spacing: 2px;
 }
-.line {
-  display: none;
-}
-
 /* ================================================ */
 /* flying baneer */
 /* top 버튼 */
-/* .top-button {
+.top-button {
   position: fixed;
   right: 30px;
   top: 100px;
@@ -151,12 +138,11 @@ footer .left button {
 }
 .top-button .chat-btn {
   animation: updown 1.5s infinite;
-} */
-/* -webkit-animation:updown 1.5s infinite; */
-/* 다른 브라우저에서도 작동 될 수 있게 하기 위해 -webkit을 사용. */
-
+  /* -webkit-animation:updown 1.5s infinite; */
+  /* 다른 브라우저에서도 작동 될 수 있게 하기 위해 -webkit을 사용. */
+}
 /* 애내메이션 효과 */
-/* @keyframes updown {
+@keyframes updown {
   0% {
     transform: translatey(0);
   }
@@ -166,29 +152,25 @@ footer .left button {
   100% {
     transform: translatey(0);
   }
-} */
+}
 /* =================================================== */
 /* 참여하기 */
 
-.takejoin {
+.takejoin{
   width: 100%;
   position: fixed;
-  background-color: #ffffff00;
+  background-color: #fff;
   bottom: 0px;
-  transition: top 0.3s ease-in-out;
+  transition: top 0.3s ease-in-out; 
   display: none;
 }
-.takejoin button {
-  margin: 0 auto;
-  text-align: center;
-  width: 100%;
+.takejoin .heart{
+  width: 80%;
   height: 100px;
   background-color: #ff4949;
   color: #fff;
   border: none;
-  font-size: 3vw;
-  border-radius: 50px;
-  outline: none;
+  font-size: 2vw;
 }
 
 /* =================================================== */
@@ -201,14 +183,6 @@ footer .left button {
     left: 295px;
   }
 }
-.section5 .content img {
-  width: 100%;
-}
-.animated-title {
-  margin-top: -2%;
-  padding-bottom: 5%;
-
-  }
 /* ===================================================== */
 @media screen and (max-width: 859px) {
   footer {
@@ -224,13 +198,10 @@ footer .left button {
   footer .left {
     float: left;
   }
-  footer .left .tell {
-    width: 100%;
+  footer .left i{
     display: block;
-    font-size: 4vw;
+    font-size: 5vw;
     text-align: left;
-    font-family: "KBO-Dia-Gothic_medium";
-    letter-spacing: 2px;
   }
   footer .left button {
     width: 130px;
@@ -239,8 +210,6 @@ footer .left button {
     background-color: #333;
     border: 1px solid #fff;
     color: #fff;
-    font-family: "KBO-Dia-Gothic_medium";
-    letter-spacing: 2px;
   }
   footer .line {
     width: 100%;
@@ -251,10 +220,6 @@ footer .left button {
 }
 /* ===================================================== */
 @media screen and (max-width: 768px) {
-  .animated-title {
-    margin-top: -2%;
-    margin-bottom: -2%;
-    }
   .section4 .snstext {
     display: block;
     width: 100%;
@@ -302,13 +267,11 @@ footer .left button {
   footer .left {
     float: left;
   }
-  footer .left .tell {
-    width: 100%;
+  footer .left i{
     display: block;
     font-size: 4vw;
     text-align: left;
-    font-family: "KBO-Dia-Gothic_medium";
-    letter-spacing: 2px;
+  }
   }
   footer .left button {
     width: 130px;
@@ -317,8 +280,6 @@ footer .left button {
     background-color: #333;
     border: 1px solid #fff;
     color: #fff;
-    font-family: "KBO-Dia-Gothic_medium";
-    letter-spacing: 2px;
   }
   footer .line {
     width: 100%;
@@ -326,38 +287,26 @@ footer .left button {
     background-color: #fff;
     margin-top: 10%;
   }
-  .line {
-    display: block;
-  }
-}
 /* ==================================================== */
-@media screen and (max-width: 480px) {
-  /* 참여하기 */
+@media  screen and (max-width: 480px){
+/* 참여하기 */
 
-  .takejoin {
-    width: 100%;
-    position: fixed;
-    background-color: #ffffff00;
-    bottom: 0px;
-    transition: top 0.3s ease-in-out;
-    display: block;
-  }
-  .takejoin button {
-    margin: 0 auto;
-    text-align: center;
-    width: 50%;
-    height: 80px;
-    background-color: #ff4949;
-    color: #fff;
-    border: none;
-    font-size: 5vw;
-    border-radius: 50px;
-    z-index: 9999999;
-    display: block;
-  }
-  .line {
-    display: block;
-  }
+.takejoin{
+  width: 100%;
+  position: fixed;
+  background-color: #fff;
+  bottom: 0px;
+  transition: top 0.3s ease-in-out; 
+}
+
+.takejoin .heart{
+  width: 80%;
+  height: 100px;
+  background-color: #ff4949;
+  color: #fff;
+  border: none;
+  font-size: 5vw;
+}
 }
 /* ==================================================== */
 @media screen and (max-width: 320px) {
@@ -398,7 +347,7 @@ footer .left button {
   }
   footer {
     width: 100%;
-    height: 450px;
+    height: 410px;
   }
   footer .right h1 {
     font-family: "UhBeeSe_hyun";
@@ -415,30 +364,16 @@ footer .left button {
   }
   footer .right p {
     line-height: 1.5;
-    font-size: 15px;
+    font-size: 13px;
   }
-  footer .left {
-    margin: 0 auto;
+  footer .left{
+      margin: 0 auto;
     text-align: center;
     width: 100%;
   }
-  footer .left .tell {
-    width: 100%;
-    display: block;
+  footer .left i {
     font-size: 10vw;
     text-align: center;
-    font-family: "KBO-Dia-Gothic_medium";
-    letter-spacing: 2px;
-  }
-  footer .left button {
-    width: 100px;
-    height: 50px;
-    margin: 20px 5px;
-    background-color: #333;
-    border: 1px solid #fff;
-    color: #fff;
-    font-family: "KBO-Dia-Gothic_medium";
-    letter-spacing: 2px;
   }
   footer .line {
     width: 250px;
