--- a/css/minju.css
+++ b/css/minju.css
@@ -1,7 +1,6 @@
 @charset "utf-8";
 /* 민주 */
 .inner {
-  /* background-color: #eee; */
   max-width: 1400px;
   margin: 0 auto;
 }
@@ -260,6 +259,9 @@ footer .line {
 
 /* ===================================================== */
 @media screen and (max-width: 768px) {
+  .section5 .content img {
+    width: 150%;
+  }
   .section4 .snstext {
     display: block;
     width: 100%;
@@ -285,7 +287,7 @@ footer .line {
   .section5 .animated-title {
     padding: 6%;
     padding-top: 4%;
-    margin-bottom: -2%;
+  
   }
   footer {
     height: 450px;
@@ -339,6 +341,13 @@ footer .line {
   }
   .snsnanum {
     margin-top: -15%;
+  }
+  .section5 .content img {
+    width: 250%;
+  }
+  .section5 .animated-title {
+    padding: 10%;
+    margin-top: -10%;
   }
   .takejoin {
     display: block;
@@ -418,12 +427,13 @@ footer .line {
     padding: 2%;
   }
   .section5 .content img {
-    width: 150%;
+    width: 350%;
   }
   .section5 .animated-title {
-    padding: 8%;
-    padding-top: 2%;
+    padding: 12%;
+    padding-top: 8%;
   }
+  
   footer {
     width: 100%;
     height: 410px;
