--- a/css/seunga.css
+++ b/css/seunga.css
@@ -63,7 +63,7 @@ header {
 }
 
 header img {
-  width: 200px;
+  width: 180px;
   display: inline-block;
   position: absolute;
   left: 30px; /* 왼쪽 여백 추가 */
@@ -123,9 +123,9 @@ nav {
   position: relative;
 }
 .visual-img {
-  width: 80%;
+  width: 100%;
   height: auto;
-  margin: 100px auto;
+  /* margin: 40px auto; */
 }
 
 /* 모바일 비주얼이미지 */
@@ -286,9 +286,9 @@ nav {
   display: flex;
   justify-content: center;
   gap: 20%;
-  padding: 3%;
+  padding: 2.5%;
   position: absolute;
-  bottom: 4%;
+  bottom: 1%;
 }
 .counter {
   font-family: "KBO-Dia-Gothic_medium";
@@ -313,8 +313,6 @@ nav {
 .section1 {
   position: relative;
   width: 100%;
-  /* max-width: 1300px; */
-  /* height: 500px; */
   background-image: url(../images/sec1-bg.png);
   background-size: cover;
   background-position: center;
@@ -327,7 +325,7 @@ nav {
 }
 .sec1-inner {
   width: 100%;
-  max-width: 1300px;
+  max-width: 1400px;
   /* background-color: red; */
 }
 .sec1-title {
@@ -353,6 +351,15 @@ nav {
 /* ========================================================================== */
 
 @media screen and (max-width: 1000px) {
+  header img {
+    width: 150px;
+  }
+nav {
+  padding: 20px;
+}
+  .visual-img {
+    width: 90%;
+  }
   .top-menu li a {
     font-size: 18px;
   }
