--- a/css/kyungran.css
+++ b/css/kyungran.css
@@ -3,13 +3,15 @@
 /* 섹션2 */
 .section2 {
   max-width: 1400px;
-  margin: 0 auto;
+  margin: 0 auto; 
+  margin-top: 150px;
+  margin-bottom: 60px;
+ 
 }
 .section-tite {
   display: block;
   font-size: 36px;
-  padding-top: 150px;
-  padding-bottom: 21px;
+  padding-bottom: 27px;
   font-weight: bold;
 }
 /* 카테고리 */
@@ -286,26 +288,29 @@
   display: block;
   margin: auto;
 }
-.pgn > span {
-  padding-right: 20px;
-}
-.pgn > span:nth-child(1) {
-  font-weight: 800;
-  color: #1e6bf1;
+.pgn > button {
+  position: relative;
+  cursor: pointer;
+  font-family: inherit;
+  font-size: 13px;
+  padding: 15px 90px;
+  line-height: 10px;
+  border: 1px solid #cfcfcf;
+  background-color: #fff;
 }
 /* 섹션3 */
 .section3 {
-  background-color: #f0f4ff;
   /* background-color: #f0f4ff; */
+  background: url("../images/kyungran/section3.png") no-repeat center;
 }
 .section3-inner {
   display: flex;
   justify-content: space-between;
   gap: 50px;
   margin: auto;
-  max-width: 1400px;
-  padding: 56px 0;
-  height: 353px;
+  max-width: 1300px;
+  padding: 56px 0 200px;
+  height: 500px;
 }
 /* 커뮤니티 */
 .section3 .CM-box {
@@ -315,7 +320,9 @@
   width: 100%;
   min-width: 276px;
   background-color: #fff;
-  border: 1px solid #ddd;
+  /* border: 1px solid #ddd; */
+  padding: 24px 30px 32px;
+        box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 10px 0px;
   border-radius: 10px;
 }
 .CM-box .CM span {
@@ -356,7 +363,9 @@
   width: 100%;
   min-width: 276px;
   background-color: #fff;
-  border: 1px solid #ddd;
+  /* border: 1px solid #ddd; */
+  padding: 24px 30px 32px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 10px 0px;
   border-radius: 10px;
   font-size: 22px;
 }
