--- a/css/kyungran.css
+++ b/css/kyungran.css
@@ -3,10 +3,9 @@
 /* 섹션2 */
 .section2 {
   max-width: 1400px;
-  margin: 0 auto; 
+  margin: 0 auto;
   margin-top: 150px;
   margin-bottom: 60px;
- 
 }
 .section-tite {
   display: block;
@@ -31,14 +30,13 @@
 .tab-nav span {
   /* display: none; */
   padding-right: 36px;
-  background-color: #1e6bf1;
 }
 .tab-nav a {
   display: block;
   padding: 11px 14px;
   border-radius: 50px;
   border: 1px solid #e8e8e8;
-  color: black;
+  color: #292929;
   text-decoration: none;
 }
 .tab-nav a:hover,
@@ -52,7 +50,8 @@
   position: relative;
   display: flex;
   justify-content: flex-end;
-  padding: 10px 0;
+  padding: 4px 0 14px;
+  gap: 4px;
 }
 /* 토글기능 */
 /* .area-list.active {
@@ -87,18 +86,14 @@
   border: 0;
   background-color: transparent;
   line-height: 19px;
-  padding: 5px 17px;
-  border: 1px solid #e8e8e8;
-}
-.toggle-bt1:hover .area-list {
-  display: block;
+  padding: 5px 16px;
 }
 .area-list {
   display: none;
   position: absolute;
   background-color: #fff;
-  top: 41px;
-  right: 115px;
+  top: 34px;
+  right: 118px;
   transform: translateX(-50%);
   border: 1px solid #ddd;
   box-shadow: 0 3px 6px 0 rgba(0 0 0 / 16%);
@@ -107,9 +102,18 @@
   min-width: 97px;
   overflow-y: scroll;
   z-index: 99;
+  border-radius: 10px;
 }
 .area-list.active {
   display: block;
+}
+.area-list:hover {
+  cursor: pointer;
+}
+.area-list li:hover {
+  color: #1e6bf1;
+  cursor: pointer;
+  background-color: #f1f3f7;
 }
 .area-list > li {
   position: relative;
@@ -141,14 +145,13 @@
   background-color: transparent;
   line-height: 19px;
   padding: 5px 16px;
-  border: 1px solid #e8e8e8;
 }
 .monthly-list {
   display: none;
   position: absolute;
   background-color: #fff;
-  top: 41px;
-  right: 34.5px;
+  top: 34px;
+  right: 39.5px;
   transform: translateX(-50%);
   border: 1px solid #ddd;
   box-shadow: 0 3px 6px 0 rgba(0 0 0 / 16%);
@@ -157,9 +160,18 @@
   min-width: 86px;
   overflow-y: scroll;
   z-index: 99;
+  border-radius: 10px;
 }
 .monthly-list.active {
   display: block;
+}
+.monthly-list:hover {
+  cursor: pointer;
+}
+.monthly-list li:hover {
+  color: #1e6bf1;
+  cursor: pointer;
+  background-color: #f1f3f7;
 }
 .monthly-list > li {
   position: relative;
@@ -182,13 +194,16 @@
   background-color: transparent;
   line-height: 19px;
   padding: 5px 14px;
-  border: 1px solid #e8e8e8;
+}
+.toggle-bt3:hover {
+  background-color: #f3f8ff;
+  transition: 0.1s;
 }
 .order-list {
   display: none;
   position: absolute;
   background-color: #fff;
-  top: 41px;
+  top: 34px;
   right: -41px;
   transform: translateX(-50%);
   border: 1px solid #ddd;
@@ -197,9 +212,18 @@
   max-height: 202px;
   min-width: 81px;
   z-index: 99;
+  border-radius: 10px;
 }
 .order-list.active {
   display: block;
+}
+.order-list:hover {
+  cursor: pointer;
+}
+.order-list li:hover {
+  color: #1e6bf1;
+  cursor: pointer;
+  background-color: #f1f3f7;
 }
 .order-list > li {
   position: relative;
@@ -225,6 +249,41 @@
   height: 100%;
   text-align: left;
 }
+.img-box > a {
+  position: relative;
+}
+.img-box a::after {
+  opacity: 1;
+}
+.img-box a:hover::after {
+  content: "";
+  display: block;
+  position: absolute;
+  background: url("../images/kyungran/잔여\ 10명\ 모집\ 15명.png") no-repeat;
+  bottom: 0;
+  /* top: 55px; */
+  top: 0px;
+  left: 50%;
+  width: 198px;
+  transform: translateX(-50%);
+  transition: all 0.2s;
+}
+.img-box > a > .img1 {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  padding-bottom: 7px;
+}
+.img-box > a:hover .img1 {
+  content: "";
+  filter: brightness(0.4);
+  transition: all 0.2s;
+}
+.img-box > a:hover span:nth-child(n + 3) {
+  color: #3b3b3b;
+  transition: all 0.2s;
+}
+
 .img-box > a > img {
   position: relative;
   width: 100%;
@@ -235,15 +294,14 @@
     filter: brightness(60%);
     transition:  all 0.2s ; 
 } */
-.img-box > a:hover .hart-icon {
+/* .img-box > a:hover .hart-icon {
   transform: translate(0, -10px) !important;
   transition: all 0.2s ease-out;
-}
-.img-box > a:hover span {
+} */
+/* .img-box > a:hover span {
   /* color:rgb(19, 74, 169) !important; */
-  color: rgb(156, 156, 156) !important;
-  /* color:#0042b5 !important; */
-}
+/* color: rgb(156, 156, 156) !important; */
+/* color:#0042b5 !important; */
 /* 내용 */
 
 .list-wrap > .img-box > a > span {
@@ -254,7 +312,7 @@
   text-overflow: ellipsis;
   word-break: break-all;
   padding: 8px 0 0px;
-  letter-spacing: -1px;
+  letter-spacing: -0.6px;
   color: #1a1a1aa3;
   font-size: 15px;
 }
@@ -264,7 +322,7 @@
   white-space: nowrap;
   text-overflow: ellipsis;
   word-break: break-all;
-  color: #202020;
+  color: #3b3b3b;
   font-size: 17px;
 }
 /* 찜하기 */
@@ -277,11 +335,12 @@
   width: 39px;
   height: 35px;
   background: url("../images/kyungran/hart-icon_gray.svg") no-repeat center;
-  z-index: 99;
+  z-index: 9;
 }
 
 .img-box .hart-icon.act {
   background: url("../images/kyungran/full-hart-icon.svg") no-repeat center;
+  transition: 0.1s;
 }
 .pgn {
   position: relative;
@@ -296,12 +355,12 @@
   padding: 15px 90px;
   line-height: 10px;
   border: 1px solid #cfcfcf;
+  border-radius: 6px;
   background-color: #fff;
 }
 /* 섹션3 */
 .section3 {
-  /* background-color: #f0f4ff; */
-  background: url("../images/kyungran/section3.png") no-repeat center;
+  background-color: #f0f4ff;
 }
 .section3-inner {
   display: flex;
@@ -309,8 +368,11 @@
   gap: 50px;
   margin: auto;
   max-width: 1300px;
-  padding: 56px 0 200px;
+  padding: 56px 0;
   height: 500px;
+}
+.section3-inner > h1{
+  font-size: 36px;
 }
 /* 커뮤니티 */
 .section3 .CM-box {
@@ -321,8 +383,8 @@
   min-width: 276px;
   background-color: #fff;
   /* border: 1px solid #ddd; */
-  padding: 24px 30px 32px;
-        box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 10px 0px;
+  padding: 40px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px;
   border-radius: 10px;
 }
 .CM-box .CM span {
@@ -345,14 +407,17 @@
 .CM-box .CM li {
   font-size: 22px;
   line-height: 41px;
-  padding-top: 8px;
+  padding-top: 21px;
   padding-left: 17px;
-  color: #1e6bf1;
+  color: #1a1a1aa3;
   width: 100%;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
   word-break: break-all;
+}
+.CM-box .CM li:nth-child(2) {
+  padding-top: 30px;
 }
 
 /* 자주 묻는 질문 */
@@ -364,8 +429,8 @@
   min-width: 276px;
   background-color: #fff;
   /* border: 1px solid #ddd; */
-  padding: 24px 30px 32px;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 10px 0px;
+  padding: 40px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px;
   border-radius: 10px;
   font-size: 22px;
 }
@@ -393,6 +458,7 @@
   left: 0;
   padding: 15px 33px;
   font-size: 22px;
+  color: #3b3b3b;
   border-radius: 0px 0px 10px 10px;
   background-color: #fafafa;
   line-height: 66px;
@@ -401,13 +467,15 @@
   text-overflow: ellipsis;
   word-break: break-all;
 }
-.FAQ-box .FAQ .FAQ-small-box li:nth-child(1) {
-  border-bottom: 1px solid #ddd;
+.FAQ-box .FAQ .FAQ-small-box li:nth-last-child(1){
+  border-bottom: none;
 }
 .FAQ-box .FAQ .FAQ-small-box li {
   width: 100%;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
-  word-break: break-all;
+  word-break: break-all; 
+   border-bottom: 1px solid #ddd;
+   padding: 9px;
 }
