--- a/css/kyungran.css
+++ b/css/kyungran.css
@@ -5,7 +5,7 @@
   max-width: 1400px;
   margin: 0 auto;
   margin-top: 150px;
-  margin-bottom: 60px;
+  margin-bottom: 150px;
 }
 .section-tite {
   display: block;
@@ -272,7 +272,7 @@
   position: relative;
   width: 100%;
   height: 100%;
-  padding-bottom: 7px;
+  padding-bottom: 10px;
 }
 .img-box > a:hover .img1 {
   content: "";
@@ -360,6 +360,7 @@
 }
 /* 섹션3 */
 .section3 {
+  position: relative;
   background-color: #f0f4ff;
 }
 .section3-inner {
@@ -368,11 +369,7 @@
   gap: 50px;
   margin: auto;
   max-width: 1300px;
-  padding: 56px 0;
-  height: 500px;
-}
-.section3-inner > h1{
-  font-size: 36px;
+  padding: 51px 0;
 }
 /* 커뮤니티 */
 .section3 .CM-box {
@@ -406,7 +403,7 @@
 }
 .CM-box .CM li {
   font-size: 22px;
-  line-height: 41px;
+  line-height: 35px;
   padding-top: 21px;
   padding-left: 17px;
   color: #1a1a1aa3;
@@ -417,7 +414,7 @@
   word-break: break-all;
 }
 .CM-box .CM li:nth-child(2) {
-  padding-top: 30px;
+  padding-top: 19px;
 }
 
 /* 자주 묻는 질문 */
@@ -456,18 +453,18 @@
   width: 100%;
   bottom: 0;
   left: 0;
-  padding: 15px 33px;
+  padding: 0px 45px 20px 46px;
   font-size: 22px;
   color: #3b3b3b;
   border-radius: 0px 0px 10px 10px;
   background-color: #fafafa;
-  line-height: 66px;
+  line-height: 59px;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
   word-break: break-all;
 }
-.FAQ-box .FAQ .FAQ-small-box li:nth-last-child(1){
+.FAQ-box .FAQ .FAQ-small-box li:nth-last-child(1) {
   border-bottom: none;
 }
 .FAQ-box .FAQ .FAQ-small-box li {
@@ -475,7 +472,7 @@
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
-  word-break: break-all; 
-   border-bottom: 1px solid #ddd;
-   padding: 9px;
+  word-break: break-all;
+  border-bottom: 1px solid #ddd;
+  padding: 9px;
 }
