--- a/css/kyungran.css
+++ b/css/kyungran.css
@@ -9,7 +9,7 @@
 }
 .section-tite {
   display: block;
-  font-size: 36px;
+  font-size: 32px;
   padding-bottom: 27px;
   font-weight: bold;
 }
@@ -35,15 +35,16 @@
   display: block;
   padding: 11px 14px;
   border-radius: 50px;
-  border: 1px solid #e8e8e8;
-  color: #292929;
+  /* border: 1.9px solid #134aa9; */
+  color: #333333;
+  background: #ededed;
   text-decoration: none;
 }
 .tab-nav a:hover,
 .tab-nav a.active {
-  background-color: #1e6bf1;
+  background-color: #134aa9;
   color: #fff;
-  transition: all 0.3s;
+  transition: all 0.2s;
 }
 /* 토글 전체 */
 .right-toggle {
@@ -81,7 +82,7 @@
   display: block;
   font-family: inherit;
   font-size: 13px;
-  color: #000;
+  color: #333;
   cursor: pointer;
   border: 0;
   background-color: transparent;
@@ -111,7 +112,7 @@
   cursor: pointer;
 }
 .area-list li:hover {
-  color: #1e6bf1;
+  color: #134aa9;
   cursor: pointer;
   background-color: #f1f3f7;
 }
@@ -119,7 +120,7 @@
   position: relative;
   display: block;
   font-size: 15px;
-  color: #666;
+  color: rgb(131 131 131);
   white-space: nowrap;
   border-bottom: 2px solid rgba(0, 0, 0, 0);
   padding: 9px 0 1px;
@@ -128,7 +129,6 @@
   display: inline-block;
   width: 10px;
   height: 6px;
-  background: url("../images/kyungran/toggle-arrow2.png") no-repeat;
   background-position: 0px 0px;
   margin-left: 6px;
   vertical-align: 2px;
@@ -139,7 +139,7 @@
   display: block;
   font-family: inherit;
   font-size: 13px;
-  color: #000;
+  color: #333;
   cursor: pointer;
   border: 0;
   background-color: transparent;
@@ -169,7 +169,7 @@
   cursor: pointer;
 }
 .monthly-list li:hover {
-  color: #1e6bf1;
+  color: #134aa9;
   cursor: pointer;
   background-color: #f1f3f7;
 }
@@ -177,7 +177,7 @@
   position: relative;
   display: block;
   font-size: 15px;
-  color: #666;
+  color: rgb(131 131 131);
   white-space: nowrap;
   border-bottom: 2px solid rgba(0, 0, 0, 0);
   padding: 9px 0 1px;
@@ -188,7 +188,7 @@
   display: block;
   font-family: inherit;
   font-size: 13px;
-  color: #000;
+  color: #333;
   cursor: pointer;
   border: 0;
   background-color: transparent;
@@ -221,7 +221,7 @@
   cursor: pointer;
 }
 .order-list li:hover {
-  color: #1e6bf1;
+  color: #134aa9;
   cursor: pointer;
   background-color: #f1f3f7;
 }
@@ -229,7 +229,7 @@
   position: relative;
   display: block;
   font-size: 15px;
-  color: #666;
+  color: rgb(131 131 131);
   white-space: nowrap;
   border-bottom: 2px solid rgba(0, 0, 0, 0);
   padding: 9px 0 1px;
@@ -266,7 +266,7 @@
   left: 50%;
   width: 198px;
   transform: translateX(-50%);
-  transition: all 0.2s;
+  transition: all 0.1s;
 }
 .img-box > a > .img1 {
   position: relative;
@@ -277,13 +277,11 @@
 .img-box > a:hover .img1 {
   content: "";
   filter: brightness(0.4);
-  transition: all 0.2s;
-}
-.img-box > a:hover span:nth-child(n + 3) {
-  color: #3b3b3b;
-  transition: all 0.2s;
 }
 
+.img-box > a:hover span:nth-child(n+2){
+  color: #134aa9;
+}
 .img-box > a > img {
   position: relative;
   width: 100%;
@@ -313,17 +311,18 @@
   word-break: break-all;
   padding: 8px 0 0px;
   letter-spacing: -0.6px;
-  color: #1a1a1aa3;
+  color: #5d5d5da3;
   font-size: 15px;
 }
-.list-wrap > .img-box > a > span:nth-child(2) {
+.list-wrap > .img-box > a > .span1 {
   width: 100%;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
   word-break: break-all;
-  color: #3b3b3b;
-  font-size: 17px;
+  color: #555555;
+  font-size: 18px;
+  padding-bottom: 5px;
 }
 /* 찜하기 */
 .img-box .hart-icon {
@@ -340,7 +339,6 @@
 
 .img-box .hart-icon.act {
   background: url("../images/kyungran/full-hart-icon.svg") no-repeat center;
-  transition: 0.1s;
 }
 .pgn {
   position: relative;
@@ -351,11 +349,11 @@
   position: relative;
   cursor: pointer;
   font-family: inherit;
-  font-size: 13px;
+  font-size: 16px;
   padding: 15px 90px;
   line-height: 10px;
   border: 1px solid #cfcfcf;
-  border-radius: 6px;
+  border-radius: 7px;
   background-color: #fff;
 }
 /* 섹션3 */
@@ -382,16 +380,16 @@
   /* border: 1px solid #ddd; */
   padding: 40px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px;
-  border-radius: 10px;
+  border-radius: 30px;
 }
 .CM-box .CM span {
-  font-size: 36px;
+  font-size: 32px;
   font-weight: bold;
 }
 .CM-box .CM .plus-icon {
   position: absolute;
-  top: 15px;
-  right: 20px;
+  top: 36px;
+  right: 36px;
   width: 54px;
   height: 54px;
   border: none;
@@ -401,9 +399,9 @@
 .CM-box .CM .plus-icon:hover {
   background: url("../images/kyungran/pluse-icon-set.png") no-repeat bottom;
 }
-.CM-box .CM li {
-  font-size: 22px;
-  line-height: 35px;
+.CM-box .CM a li {
+  font-size: 19px;
+  line-height: 31px;
   padding-top: 21px;
   padding-left: 17px;
   color: #1a1a1aa3;
@@ -416,6 +414,9 @@
 .CM-box .CM li:nth-child(2) {
   padding-top: 19px;
 }
+.CM-box .CM a:hover li {
+  color: #134aa9;
+}
 
 /* 자주 묻는 질문 */
 .section3 .FAQ-box {
@@ -425,20 +426,19 @@
   width: 100%;
   min-width: 276px;
   background-color: #fff;
-  /* border: 1px solid #ddd; */
   padding: 40px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px;
-  border-radius: 10px;
+  border-radius: 30px;
   font-size: 22px;
 }
 .FAQ-box .FAQ span {
-  font-size: 36px;
+  font-size: 32px;
   font-weight: bold;
 }
 .FAQ-box .FAQ .plus-icon {
   position: absolute;
-  top: 15px;
-  right: 20px;
+  top: 36px;
+  right: 36px;
   width: 54px;
   height: 54px;
   border: none;
@@ -454,20 +454,19 @@
   bottom: 0;
   left: 0;
   padding: 0px 45px 20px 46px;
-  font-size: 22px;
-  color: #3b3b3b;
-  border-radius: 0px 0px 10px 10px;
+  font-size: 19px;
+  border-radius: 0px 0px 30px 30px;
   background-color: #fafafa;
-  line-height: 59px;
+  line-height: 51px;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
   word-break: break-all;
 }
-.FAQ-box .FAQ .FAQ-small-box li:nth-last-child(1) {
+.FAQ-small-box > a > li:nth-last-child(1) {
   border-bottom: none;
 }
-.FAQ-box .FAQ .FAQ-small-box li {
+.FAQ-small-box > a > li {
   width: 100%;
   overflow: hidden;
   white-space: nowrap;
@@ -475,4 +474,8 @@
   word-break: break-all;
   border-bottom: 1px solid #ddd;
   padding: 9px;
+  color: rgba(26, 26, 26, 0.64);
+}
+.FAQ-small-box > a:hover li {
+  color: #134aa9;
 }
