--- a/css/minju.css
+++ b/css/minju.css
@@ -49,7 +49,6 @@ hr {
   width: 100%;
 }
 .animated-title {
-
   position: relative;
   width: 100%;
   max-width: 100%;
@@ -93,7 +92,7 @@ footer {
 }
 footer .right {
   float: left;
-  margin: 30px;
+  margin: 1%;
   padding: 20px;
 }
 footer .right h1 {
@@ -120,7 +119,7 @@ footer .left {
   margin: 30px;
   margin-top: 5%;
 }
-footer .left img{
+footer .left img {
   width: 20%;
 }
 
@@ -137,6 +136,11 @@ footer .left button {
   background-color: #333;
   border: 1px solid #fff;
   color: #fff;
+  font-family: "KBO-Dia-Gothic_light";
+  letter-spacing: 2px;
+}
+footer p{
+  letter-spacing: 2px;
 }
 footer .line {
   display: none;
@@ -209,7 +213,7 @@ footer .line {
   footer .line {
     display: none;
   }
-  footer .left img{
+  footer .left img {
     width: 15%;
   }
 }
@@ -232,6 +236,10 @@ footer .line {
     height: 500px;
     width: 100%;
   }
+  footer .right{
+    margin: 3%;
+    margin-top: 1%;
+  }
   footer .right h1 {
     font-family: "UhBeeSe_hyun";
     font-size: 5vw;
@@ -246,8 +254,10 @@ footer .line {
   }
   footer .left {
     float: left;
-  }
+    margin: 8%;  }
+
   footer .left .tell {
+    margin-top: -20%;
     display: block;
     font-size: 5vw;
     text-align: left;
@@ -259,11 +269,17 @@ footer .line {
     background-color: #333;
     border: 1px solid #fff;
     color: #fff;
+    font-family: "KBO-Dia-Gothic_light";
+    letter-spacing: 2px;
   }
-  footer .line {
+  footer p{
+    letter-spacing: 2px;
+  }
+  footer p::after {
+    content: "";
     display: block;
-    width: 100%;
-    height: 2px;
+    width: 145%;
+    height: 1px;
     background-color: #fff;
     margin-top: 10%;
   }
@@ -272,7 +288,7 @@ footer .line {
 /* ===================================================== */
 @media screen and (max-width: 768px) {
   .section5 .content img {
-    width: 150%;
+    width: 300%;
   }
   .section4 .snstext {
     display: block;
@@ -297,9 +313,9 @@ footer .line {
     padding: 2%;
   }
   .section5 .animated-title {
-    padding: 6%;
+    padding: 12%;
     padding-top: 4%;
-  
+    padding-bottom: -4%;
   }
   footer {
     height: 450px;
@@ -320,15 +336,14 @@ footer .line {
   footer .left {
     float: left;
     margin: 8%;
-    margin-top: -3%;
+    margin-top: 6%;
   }
   footer .left .tell {
-
     display: block;
     font-size: 5vw;
     text-align: left;
   }
-}
+
 footer .left button {
   width: 130px;
   height: 50px;
@@ -337,12 +352,17 @@ footer .left button {
   border: 1px solid #fff;
   color: #fff;
 }
-footer .line {
-  width: 100%;
-  height: 2px;
+footer p{
+  letter-spacing: 2px;
+}
+footer p::after {
+  content: "";
+  display: block;
+  width: 130%;
+  height: 1px;
   background-color: #fff;
-  margin-top: 10%;
-  margin: 50 auto;
+  margin-top: 8%;
+}
 }
 /* ==================================================== */
 @media screen and (max-width: 480px) {
@@ -355,11 +375,11 @@ footer .line {
     margin-top: -15%;
   }
   .section5 .content img {
-    width: 250%;
+    width: 350%;
   }
   .section5 .animated-title {
-    padding: 10%;
-    margin-top: -10%;
+    padding: 12%;
+    margin-top: -12%;
   }
   .takejoin {
     display: block;
@@ -400,8 +420,9 @@ footer .line {
     color: #fff;
   }
   footer .right p {
-    line-height: 1.5;
-    font-size: 13px;
+    line-height: 1.3;
+    font-size: 16px;
+    letter-spacing: 2px;
   }
   footer .left {
     margin: 0 auto;
@@ -411,9 +432,28 @@ footer .line {
   footer .left .tell {
     font-size: 8vw;
     text-align: center;
+    margin-top: 4%;
   }
-  footer .left img{
-    width: 10%;
+  footer .left img {
+    width: 8%;
+  }
+  footer .left button {
+    width: 130px;
+    height: 50px;
+    margin: 20px 5px;
+    background-color: #333;
+    border: 1px solid #fff;
+    color: #fff;
+    font-family: "KBO-Dia-Gothic_light";
+    letter-spacing: 2px;
+  }
+  footer p::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 1px;
+    background-color: #fff;
+    margin-top: 10%;
   }
 }
 /* ==================================================== */
@@ -445,10 +485,10 @@ footer .line {
     width: 350%;
   }
   .section5 .animated-title {
-    padding: 12%;
-    padding-top: 8%;
+    padding: 14%;
+    padding-top: -10%;
   }
-  
+
   footer {
     width: 100%;
     height: 410px;
@@ -464,17 +504,10 @@ footer .line {
     text-align: left;
     color: #ffffff79;
   }
-  footer .left button {
-    width: 130px;
-    height: 50px;
-    margin-top: 20px;
-    background-color: #333;
-    border: 1px solid #fff;
-    color: #fff;
-  }
+
   footer .right p {
-    line-height: 1.5;
-    font-size: 13px;
+    line-height: 1.3;
+    font-size: 15px;
   }
   footer .left {
     margin: 0 auto;
@@ -485,10 +518,24 @@ footer .line {
     font-size: 8vw;
     text-align: center;
   }
-  footer .line {
-    width: 250px;
-    height: 2px;
+  footer .left img{
+    width: 10%;
+  }
+  footer .left button {
+    width: 130px;
+    height: 50px;
+    margin: 20px 5px;
+    background-color: #333;
+    border: 1px solid #fff;
+    color: #fff;
+    font-family: "KBO-Dia-Gothic_light";
+    letter-spacing: 2px;
+  }
+  footer p::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 1px;
     background-color: #fff;
-    margin-top: 10%;
   }
 }
