--- a/css/res_kyungran.css
+++ b/css/res_kyungran.css
@@ -63,17 +63,19 @@
   }
   .FAQ-box .FAQ a li {
     line-height: 28px;
-}
-.CM-box .CM a li {
+  }
+  .CM-box .CM a li {
     line-height: 23px;
-}
-.section3 .CM-box , .section3 .FAQ-box {
+  }
+  .section3 .CM-box,
+  .section3 .FAQ-box {
     padding: 35px;
-}
-.CM-box .CM .plus-icon , .FAQ-box .FAQ .plus-icon {
+  }
+  .CM-box .CM .plus-icon,
+  .FAQ-box .FAQ .plus-icon {
     top: 32px;
     right: 32px;
-}
+  }
 }
 @media all and (max-width: 710px) {
   .section2 .list-wrap .img-box:nth-child(3) {
@@ -102,9 +104,9 @@
   .CM-box .CM span {
     font-size: 28px;
   }
-.FAQ-box .FAQ span {
-  font-size: 28px;
-}
+  .FAQ-box .FAQ span {
+    font-size: 28px;
+  }
 }
 @media all and (max-width: 450px) {
   /* 탭메뉴 가로설정 */
@@ -132,10 +134,11 @@
   .tab-nav-wrapper {
     width: 279px !important;
   }
+
   .img-box a::after {
-    width:80%;
-    background-size:contain;
-    }
+    width: 90% !important;
+    background-size: contain !important;
+  }
 }
 @media all and (max-width: 340px) {
   /* 탭메뉴 가로설정 */
